...
    <!--        android:id="@+id/imageButtonSearch"-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/textViewUnidades"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.411"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/editTextPlaceSearch"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.807"-->
    <!--        app:srcCompat="@android:drawable/ic_menu_search" />-->

    <TextView
        android:id="@+id/textViewTemperaturaMain"
...
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTemperaturaMain"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelBusqueda"
        app:layout_constraintVertical_bias="0.231" />

    <HorizontalScrollView
        android:id="@+id/panelDatosSemana"
        android:layout_width="380dp"
        android:layout_height="200dp"
...
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="40dp"
        android:alpha="0.9"
        android:background="@drawable/rounded"
        android:foregroundGravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/navigation_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.gridlayout.widget.GridLayout
...
                android:src="@android:drawable/ic_btn_speak_now"
                app:layout_constraintBottom_toBottomOf="@+id/texto"
                app:layout_constraintLeft_toRightOf="@+id/texto"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/addFav"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_favorite_border_24"
                android:backgroundTint="@color/turquoise"
                android:contentDescription="@string/addDescrip"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
...
