<resources>
    <string name="app_name">BetterWeather</string>
    <string name="textoBuscarEjemplo">Londres</string>
    <string name="textoBuscarHint">Lugar</string>
    <string name="textoUnidades">Unidades</string>
    <string name="identificadorLugar">Lugar:</string>
    <string name="temperaturaLugar">Temperatura:</string>
    <string name="temperatura">TMP</string>
    <string name="clima">Clima</string>
    <string name="datos">Datos</string>
    <string name="fecha">01/01/2023</string>
    <string name="action_settings">Ajustes</string>

    <string-array name="units_array">
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>

    <string name="title_activity_asdasdas">asdasdas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favDescrip">Acceder al panel de favoritos</string>
    <string name="addDescrip">Add el lugar a favoritos</string>
    <string name="iconDescrip">Icono de la condición del tiempo</string>

    <string name="home">Home</string>
    <string name="favourites">Favoritos</string>
    <string name="map">Mapa meteorologico</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="estado">Condicion metereologica:</string>

    <string-array name="layers">
        <item>Nubes</item>
        <item>Temperatura</item>
        <item>Precipitaciones</item>
        <item>Viento</item>
        <item>Presion</item>
    </string-array>

    <string name="tituloNotificationChannel1">Temperatura</string>
    <string name="descripcionNotificationChannel1">Notificacion que indica la temperatura de la localizacion del dispositivo</string>
    <string name="cerrar">Cerrar</string>
    <string name="made_by">Powered by</string>
    <string name="autores"><![CDATA[Israel Solís Iglesias & Omar Teixeira González]]></string>
    <string name="infoCamara">Camara mas Cercana</string>
    <string name="equipo">4T0M1C_CH0P3</string>
    <string name="logo">Logo de BetterWeather</string>
    <string name="microfono">Microfono para uso por voz</string>

    <string name="noUbicacion">No hemos podido obtener una ubicación</string>

    <string name="noPermisosAceptados">No se ha podido realizar ya que no has aceptado los permisos</string>

    <string name="marcadorPersonalizado">Marcador personalizado</string>

    <string name="microfonoBuscar">¿Qué lugar está buscando?</string>

    <string name="borradoFavoritos">Se ha borrado de favoritos</string>
    <string name="anadidoFavoritos">Se ha añadido a favoritos</string>
    <string name="noPodidoFavoritos">No se ha podido añadir a favoritos ya que el lugar no existe</string>

    <string name="permisoGooglePlayNoDisponible">No se ha podido acceder a los servicios de Google Play</string>

    <string name="permisoUbicacionAceptado">Permiso de ubicación de voz aceptado</string>
    <string name="permisoGrabacionAceptado">Permiso de grabación de voz aceptado</string>
    <string name="permisoUbicacionRechazado">Permiso de ubicación de voz rechazado</string>
    <string name="permisoGrabacionRechazado">Permiso de grabación de voz rechazado</string>
</resources>