...
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/botonBorrar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/ic_delete_24"
        tools:ignore="SpeakableTextPresentCheck" />

...
